--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
             <meta name="description" content="DD King Portfolio">
             <meta name="author" content="Denis Denisenko">
             <link rel = "stylesheet" href="style.css">
+            <link rel="icon" href="./pics/favicon.ico">
             <title>DDKing | Welcome</title>
         </head>
         <body>
