--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <header>
                 <div class="container">
                     <div id = "top">
-                        <h1>DD King Portfolio</h1>
+                        <h1>DD King Portfolio ME</h1>
                     </div>
                     <nav>
                         <img src="./pics/notes.png">
